--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <section id="press">
 
     <img class="press-image" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-image" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-image" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-image" src="images/mashable.png" alt="mashable-logo">
     <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
 
